agregar pagina de home (#1)

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>Home</title>
   <script src="https://www.gstatic.com/firebasejs/4.7.0/firebase.js"></script>
   <script>
     // Initialize Firebase
@@ -23,16 +22,9 @@
 </head>
 
 <body>
-  <h4>Registro de Usuarios</h4>
-  <input id="email" type="email" placeholder="ingresa email">
-  <input id="password" type="password" placeholder="ingresa contraseña">
-  <button onclick="registrar()">Enviar</button>
-
-  <h4>Ingreso de Usuarios</h4>
-  <input id="emailIngreso" type="email" placeholder="ingresa email">
-  <input id="passwordIngreso" type="password" placeholder="ingresa contraseña">
-  <button onclick="ingreso()">Acceder</button>
-  <script src="js/app.js"></script>
+  <h4>BIENVENIDO</h4>
+  <button onclick="cerrar()">cerrar sesión</button>
+  <script src="../js/home.js"></script>
 </body>
 
 </html>
