--- a/src/views/ingresar.html
+++ b/src/views/ingresar.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="../images/orange.png">
     <title>Login</title>
     <!--CSS-->
     <link rel="stylesheet" type="text/css" href="../css/style.css">
