se modifico ruta de imagen rota

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -118,7 +118,7 @@
           <div class="premios-titulo">
             <img src="../images/numero-1.png" alt="mamilas"> MÁS de tres comentarios
           </div>
-          <img class="recompensa-img" src="../images/pañal.jpg" alt="mamilas">
+          <img class="recompensa-img" src="../images/pañal1.jpg" alt="mamilas">
         </div>
         <div>
           <img src="../images/numero-2.png" alt="mamilas"> MÁS de tres LIKES por comentario
