--- a/src/views/home.html
+++ b/src/views/home.html
@@ -122,7 +122,7 @@
         </div>
         <div>
           <img src="../images/numero-2.png" alt="mamilas"> MÁS de tres LIKES por comentario
-          <img class="recompensa-img" src="../images/panal1.jpg" alt="mamilas">
+          <img class="recompensa-img" src="../images/producto.jpg" alt="mamilas">
         </div>
         <div>
           <img src="../images/numero-3.png" alt="mamilas"> MÁS de seis LIKES por comentario
