Se refactorizo home.html

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -45,20 +45,20 @@
 
         <!--MENU DESPLEGABLE-->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle sec" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+          <a class="nav-link dropdown-toggle sec" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             Herramientas
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink2">
             <a class="dropdown-item" href="especialista.html">Especialistas</a>
           </div>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle sec" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+          <a class="nav-link dropdown-toggle sec" href="#" id="navbarDropdownMenuLink3" data-toggle="dropdown" aria-haspopup="true"
             aria-expanded="false">
             Usuario
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink4">
             <a class="dropdown-item" href="#" onclick="logout()">Salir</a>
           </div>
         </li>
